@@ -1,6 +1,9 @@
 Changes from jTDS 1.3.1
 =======================
 
+09/06/2013 - Holger Rehn
+ o Removed synchronization from method getAutoCommit().
+
 09/03/2013 - Holger Rehn
  o Fixed bug #715, infinite loop when parsing an SQL command.
  o Fixed bug #710, invalid property handling in JtdsObjectFactory.
